--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.0",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
